# fbximport-experiment

./: Cargo.toml
src/: fbx.rs  main.rs  mesh_processor.rs  polygon_utils.rs  scene.rs
src/fbx/: header.rs  importer.rs  node.rs  node_collection.rs  property.rs
src/mesh_processor/: triangulate_processor.rs
src/mesh_processor/triangulate_processor/: face_triangulator.rs
src/scene/: mesh.rs
src/scene/mesh/: face_vertex_iterator.rs
