[package]
name = "fbximport"
version = "0.1.0"
authors = ["Emil Nordén <emilnorden@yahoo.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
num = "0.3.1"
inflate = "0.4.5"
glm = "0.2.3"
multimap = "0.8.2"
image = "0.23.12"
deflate = "0.9.0"